atualização do rodapé

--- a/exercicios/ex022miniprojetocompleto/android.html
+++ b/exercicios/ex022miniprojetocompleto/android.html
@@ -140,7 +140,7 @@
 
         </article>
       </main>
-      <footer>Site Criado por <a href="https://github.com/gustavoguanabara">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/">CursoemVídeo</a></footer>
+      <footer>Site Criado por <a href="https://github.com/gustavoguanabara">Wellinton alves</a> para o <a href="https://www.cursoemvideo.com/">Projeto</a></footer>
 
 </body>
 </html>
