--- a/exercicios/ex022miniprojetocompleto/android.html
+++ b/exercicios/ex022miniprojetocompleto/android.html
@@ -140,7 +140,7 @@
 
         </article>
       </main>
-      <footer>Site Criado por <a href="https://github.com/gustavoguanabara">Wellington alves</a> para o <a href="https://www.cursoemvideo.com/">Projeto</a></footer>
+      <footer>Site Criado por <a href="https://github.com/wtomalves">Wellington alves</a> para o <a href="https://wtomalves.github.io/html-css/exercicios/ex022miniprojetocompleto/android.html">Projeto</a></footer>
 
 </body>
 </html>
